--- a/EqUiWebUi/Areas/VASC/Views/c_variable/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/Edit.cshtml
@@ -73,6 +73,9 @@
     </div>
 }
 
+<p>
+  @Html.ActionLink("DELETE record", "Delete", new { id = Model.id })
+</p>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
