--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -32,6 +32,7 @@
         </div>
         <p><a href="~/vasc/c_controller/index" class="btn btn-danger btn-sm">c_controller &raquo;</a></p>
         <p><a href="~/vasc/rt_active_info/index" class="btn btn-success btn-sm">rt_active_info &raquo;</a>See current connection status for a controller</p>
+        <p><a href="~/vasc/rt_active_info/index?ShowNOKonly=true" class="btn btn-success btn-sm">NOK only &raquo;</a>See controllers that are not connected now</p>
     </div>
 </div>
 
