--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/Edit.cshtml
@@ -82,7 +82,9 @@
         </div>
     </div>
 }
-
+<p>
+   @Html.ActionLink("DELETE record", "Delete", new { id = Model.id })
+</p>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
