--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
@@ -10,10 +10,14 @@
     columns.Add(c => c.rt_table).Titled("rt_table");
     columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes"); //must check doc to make this enum
     columns.Add(c => c.datatype).Titled("datatype"); //idem
-
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
                     ).Filterable(false);
+    columns.Add(c => c)
+            .Titled("")
+            .Encoded(false)
+            .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_id = c.id, controller_id = ViewBag.controller_id })
+            ).Filterable(false);
 }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
