--- a/EqUiWebUi/Areas/VASC/Views/c_variable/GetVariableData.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/GetVariableData.cshtml
@@ -1,8 +1,31 @@
-﻿
+﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.rt_value>
 @{
-    ViewBag.Title = "GetVariableData";
+    ViewBag.Title = "GetDeviceInfoData";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>GetVariableData</h2>
+COUNT: @Model.Count()
 
+@Html.Grid(Model).Named("rt_value").Build(columns =>
+{
+    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.c_controller.controller_name).Titled("controller_name");
+    columns.Add(c => c.C_timestamp).Titled("_timestamp");
+    columns.Add(c => c.abbDateTime).Titled("abbDateTime");
+    columns.Add(c => c.c_variable_id).Titled("c_variable_id");
+    columns.Add(c => c.c_variable.variable).Titled("variable");
+    columns.Add(c => c.value).Titled("value");
+    columns.Add(c => c.isEvent).Titled("isEvent");
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 30;
+}).Empty("Did not find anything").Css("table-hover")
+
+@section scripts{
+    <script>
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+    </script>
+}
