--- a/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_variable>
 
+<div class="badge">Count: @Model.Count()</div>
+
 @Html.Grid(Model).Named("c_variable").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
@@ -19,4 +21,7 @@
                 .Encoded(false)
                 .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_id = c.id, controller_id = ViewBag.controller_id })
                 ).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 10;
+}).Empty("Did not find anything").Css("table-hover")
