--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -14,11 +14,13 @@
     <h2>Index c_controller_class</h2>
     <div class="alert alert-info">
         <h4>
-            Configuration as to what the operations of a VASCService on a controller that is within the class.
+            Configuration of the controller class sets what a controller in that class should do
         </h4>
 
         <div class="text-muted">
-            See VASC manual for more details (2.5)
+            <p>*The "Mask" fields are binairy mask that tell VASC with subsystem records should be read</p>
+            <p>*The "ev" fields set what should be done when a certain controller event happens.</p>
+            <p>*See VASC manual for more details (2.5)</p>
         </div>
     </div>
 </div>
@@ -42,13 +44,18 @@
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
                     ).Filterable(false);
+    columns.Add(c => c)
+                .Titled("")
+                .Encoded(false)
+                .RenderedAs(c => @Html.ActionLink("ShowEvents", "GetEventData", new {controller_id = ViewBag.controller_id })
+                ).Filterable(false);
 }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
 
 <hr />
 
 <div class=" modal-body">
     <div class="modal-content">
-        <div class="alert alert-info">More info about the selected controller class</div>
+        <div class="alert alert-info">This is connected to selected controller class</div>
         <div id="c_controller_classDetails">Click on a controller class to see what is configured</div>
     </div>
 </div>
@@ -68,5 +75,7 @@
                 $("#c_controller_classDetails").load(url);
             }
         });
+        //sim click on first row.
+        $("#c_controller_class>table>tbody>tr:first").trigger('click');
     </script>
 }
