--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
@@ -2,7 +2,10 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h4 class="panel-title">c controllers (controllers in this class)</h4>
+        <h4 class="panel-title">
+            c controllers in this class
+            @if (ViewBag.controller_id != null){<strong>Filtered on controllerID: @ViewBag.controller_id</strong>}
+        </h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="alert-info">
@@ -15,6 +18,10 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">c variable </h4>
+        <div class="text-muted">
+            (Rapid variables or IO signals handeld *logged to a table or used as event)
+            @Html.ActionLink("c_variable index", "Index", "c_variable")
+        </div>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="alert-info">
@@ -26,19 +33,27 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h4 class="panel-title">c variable search</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        <h4 class="panel-title">c variable search </h4>
+        <div class="text-muted">
+            (Rapid variabels to be search for at startup and logged to a table)
+            @Html.ActionLink("c_variable search_index", "Index", "c_variable_search")
+        </div>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
+        <div class="alert-info">
+        </div>
+        <div class="panel-body">
+            <div id="c_variable_searchGrid" class="mvc-grid"></div>
+        </div>
     </div>
-    <div class="alert-info">
-    </div>
-    <div class="panel-body">
-        <div id="c_variable_searchGrid" class="mvc-grid"></div>
-    </div>
-</div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">c error</h4>
+        <div class="text-muted">
+            (alarms from controllereventlog can be setup to be ignored or redirected to junk table)
+            @Html.ActionLink("c_error_index", "Index", "c_error")
+        </div>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="alert-info">
@@ -51,6 +66,10 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">c csv log</h4>
+        <div class="text-muted">
+            (csv file type file to be monitored and logged to a table)
+            @Html.ActionLink("c_csv_log_index", "Index", "c_csv_log")
+        </div>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="alert-info">
@@ -63,6 +82,10 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">c device info</h4>
+        <div class="text-muted">
+            (setup how device info is monitored)
+            @Html.ActionLink("c_device_info_log_index", "Index", "c_device_info")
+        </div>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="alert-info">
@@ -77,57 +100,57 @@
     //load girds
     console.log("c_variableGrid");
     $('#c_variableGrid').mvcgrid({
-      sourceUrl: '@Html.Raw(@Url.Action("_List","c_variable", new {enable_mask = Model.cVariableMask, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List","c_variable", new {enable_mask = Model.cVariableMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
          $("#c_variableGrid").html("Error while loading!!!");
-      }
-    });
+                }
+            });
 
     console.log("c_variable_searchGrid");
     $('#c_variable_searchGrid').mvcgrid({
-      sourceUrl: '@Html.Raw(@Url.Action("_List", "c_variable_search", new {enable_mask = Model.cVariableSearchMask, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_variable_search", new {enable_mask = Model.cVariableSearchMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
           $("#c_variable_searchGrid").html("Error while loading!!!");
-      }
-    });
+                }
+            });
 
     console.log("c_errorGrid");
     $('#c_errorGrid').mvcgrid({
-      sourceUrl: '@Html.Raw(@Url.Action("_List", "c_error", new {enable_mask = Model.cErrorMask, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_error", new {enable_mask = Model.cErrorMask, controller_id = ViewBag.controller_id }))',
       requestType: 'get', // Ajax grid request type
       reloadFailed: function (result) {
           $("#c_errorGrid").html("Error while loading!!!");
-      }
-    });
+                }
+            });
 
     console.log("c_csv_logGrid");
     $('#c_csv_logGrid').mvcgrid({
-        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_csv_log", new {enable_mask = Model.cCSVLogMask, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_csv_log", new {enable_mask = Model.cCSVLogMask, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
             $("#c_csv_logGrid").html("Error while loading!!!");
-        }
-    });
+                }
+            });
 
     console.log("c_device_infoGrid");
     $('#c_device_infoGrid').mvcgrid({
-        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_device_info", new {enable_mask = Model.cDeviceInfoMask, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_device_info", new {enable_mask = Model.cDeviceInfoMask, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
             $("#c_device_infoGrid").html("Error while loading!!!");
-        }
-    });
+                }
+            });
 
     console.log("c_controllerGrid");
     $('#c_controllerGrid').mvcgrid({
-        sourceUrl: '@Html.Raw(@Url.Action("_List", "c_controller", new { controllerclass = Model.id, controller_id = ViewBag.controller_id }))',
+                sourceUrl: '@Html.Raw(@Url.Action("_List", "c_controller", new { controllerclass = Model.id, controller_id = ViewBag.controller_id }))',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
             $("#c_controllerGrid").html("Error while loading!!!");
-        }
-    });
+                }
+            });
 
 
 </script>
