--- a/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<EqUiWebUi.Areas.VASC.Models.c_csv_log>
 
+<div class="badge">Count: @Model.Count()</div>
 
 @Html.Grid(Model).Named("c_csv_log").Build(columns =>
 {
@@ -20,4 +21,7 @@
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Show", "GetCsvFileData", new { c_csv_log_id = c.id, controller_id = ViewBag.controller_id })
                     ).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 10;
+}).Empty("Did not find anything").Css("table-hover")
