--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_device_info>
 
+<div class="badge">Count: @Model.Count()</div>
+
 @Html.Grid(Model).Named("c_device_info").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
