--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_error>
 
+<div class="badge">Count: @Model.Count()</div>
+
 @Html.Grid(Model).Named("c_error").Build(columns =>
     {
         columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
@@ -15,4 +17,7 @@
                         .Encoded(false)
                         .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
                         ).Filterable(false);
-    }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+    }).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 10;
+}).Empty("Did not find anything").Css("table-hover")
