--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.c_controller>
 
-<div class="badge">Count: @Model.Count()</div>
-
-@Html.Grid(Model).Named("c_controller").Build(columns =>
+@Html.Grid(Model).Named("c_controllerGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
@@ -24,4 +22,6 @@
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
+
+<div class="badge">Count: @Model.Count()</div>
 
