--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -1,8 +1,6 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_device_info>
 
-<div class="badge">Count: @Model.Count()</div>
-
-@Html.Grid(Model).Named("c_device_info").Build(columns =>
+@Html.Grid(Model).Named("c_device_infoGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
@@ -23,3 +21,5 @@
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
+
+<div class="badge">Count: @Model.Count()</div>
