--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -17,7 +17,7 @@
             <p>*Here we can setup how different sessions of vasc should run</p>
         </div>
         <p><a href="~/vasc/c_service_setup/index" class="btn btn-danger btn-sm">c_service_setup &raquo;</a></p>
-
+        <p><a href="~/vasc/service/GetServices" class="btn btn-danger btn-sm">get configured services on server &raquo;</a></p>
         <div class="alert alert-danger">
             <strong>Add/Edit controller class</strong>
             <p>*A controller class set what is done for a certain 'type' of robots</p>
