--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -1,8 +1,6 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_error>
 
-<div class="badge">Count: @Model.Count()</div>
-
-@Html.Grid(Model).Named("c_error").Build(columns =>
+@Html.Grid(Model).Named("c_errorGrid").Build(columns =>
     {
         columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
         columns.Add(c => c.enable_bit).Titled("enable_bit");
@@ -21,3 +19,5 @@
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
+
+<div class="badge">Count: @Model.Count()</div>
