--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>List of all VASC sessions</h2>
 
-@Html.Grid(Model).Named("c_service_setupSessions").Build(columns =>
+@Html.Grid(Model).Named("c_service_setupSessionsGrid").Build(columns =>
     {
         columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
         columns.Add(c => c._Enable_bit).Titled("enable_mask"); 
@@ -18,7 +18,7 @@
 
 <hr />
 
-<div class=" modal-body">
+<div class="modal-body">
     <div class="modal-content">
         <div class="alert alert-warning">More options for selected session</div>
         <div id="sessiondetails"></div>
@@ -31,10 +31,10 @@
     if the option has a sessiondatabit set to -1 this means its for <strong>ALL SESSIONS</strong>
 </div> 
 
-<div class=" modal-body">
+<div class="modal-body">
     <div class="modal-content">
         <div class="alert alert-info">settings for the selected session</div>
-        <div id="c_service_setupDetails">Click on a session to see what is configured</div>
+        <div id="c_service_setupDetails"></div>
         <p>
             @Html.ActionLink("Create New parameter", "Create")
         </p>
@@ -49,7 +49,7 @@
         $("#allcontent").removeClass("container");
 
         //render details when they click on it.
-        $('#c_service_setupSessions').mvcgrid({
+        $('#c_service_setupSessionsGrid').mvcgrid({
             rowClicked: function (row, data, e) {
                 $("#sessiondetails").html("Loading.....");
                 var url1 = '@Url.Action("_sessionDetails")?sessionName=' + data.value
